2009-10-16	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/bin/pfcmd: Work torwards Nessus integration
	pfcmd now handles by itself the fact that it needs to close the 
	system scan violation if the scan was successfull

	* pf/lib/pf/action.pm, pf/lib/pf/violation.pm: Slight logging changes to
	better represent what is actually going on.

	* pf/lib/pf/trigger.pm: trigger_add_scan now follows a contract: returns
	1 if a violation was added by the trigger and 0 otherwise
	a litle POD doc as a bonus

2009-10-16      Regis Balzard <rbalzard@inverse.ca>
	* pf/conf/ui.conf:
	* pf/bin/pfcmd:
	* pf/lib/pf/pfcmd/pfcmd.pm:
	* pf/lib/pf/services.pm: Added the pf_gateway field in networks.conf 
	used to store the PacketFence gateway for a routed VLAN. This is field 
	is only used with routed Registration and Isolation VLANs.
	Added code to allow PacketFence to dynamically create static routes for
	routed Registration and Isolation VLANs. We use the pf_gateway field.

2009-10-16      Regis Balzard <rbalzard@inverse.ca>
	* pf/bin/pfcmd: Added a fix to show a message when trying to delete a 
	node having open locationlog entries. Fixes #807
	http://www.packetfence.org/mantis/view.php?id=807

2009-10-15      Regis Balzard <rbalzard@inverse.ca>
	* pf/conf/authentication/local.pm: Fixed test to validate if user/pwd 
	is ok for local authentication during registration process. Fixes #779
	http://www.packetfence.org/mantis/view.php?id=779

2009-10-15      Regis Balzard <rbalzard@inverse.ca>
	* pf/lib/pf/web.om: Fixed redir.cgi crash when upgrading useragent. 
	Fixes #782
	http://www.packetfence.org/mantis/view.php?id=782

2009-10-15      Regis Balzard <rbalzard@inverse.ca>
	* pf/lib/pf/violation.pm: "violation not added, no trigger found for.."
	messages too noisy in logs so we decreased log level from INFO to 
	DEBUG. Fixes #812
	http://www.packetfence.org/mantis/view.php?id=812

2009-10-15      Regis Balzard <rbalzard@inverse.ca>
	* pf/addons/accounting.pl 